--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^1.0.3
   get_storage: ^2.0.3
   dio: ^4.0.6
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
