--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   jiffy: ^5.0.0
   image_picker: ^0.8.5
   calendar_timeline: ^1.0.4
+  firebase_auth: ^3.3.14
+  google_sign_in: ^5.3.0
 
 dev_dependencies:
   flutter_test:
