--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.2
   oktoast: ^3.1.5
   flutter_svg: ^1.0.3
   get_storage: ^2.0.3
@@ -44,6 +43,9 @@ dependencies:
   calendar_timeline: ^1.0.4
   firebase_core: ^1.16.0
   firebase_auth: ^3.3.17
+  google_sign_in: ^5.3.0
+  provider: ^6.0.2
+  flutter_facebook_auth: ^4.3.3
 
 dev_dependencies:
   flutter_test:
