--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in: ^5.3.0
   provider: ^6.0.2
   flutter_facebook_auth: ^4.3.3
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
